tests/paczka1/fuzzy1/16015973.err
Error in line 6: VfJj A825 21,5
Error in line 7: VfJj A753 3,8
Error in line 22: v1s8YhB7uI A174 0,5
Error in line 27: UJVINC65G0 A753 80,5
Error in line 31: VfJj A825 72,7
Error in line 28: A309 A309 54,0
Error in line 36: A309 A753 39,5
